// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SliderInput /> should render a slider 1`] = `
.c11.c11.c11.c11.c11 {
  position: relative;
  width: 100%;
  height: 3px;
}

.c12.c12.c12.c12.c12 {
  position: absolute;
  inset: 0;
  border-radius: 9999px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-composite: source-in;
  -webkit-mask-composite: intersect;
  mask-composite: intersect;
  -webkit-transition: clip-path 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
  transition: clip-path 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  color: hsla(200,10%,18%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.8125rem;
  -webkit-letter-spacing: -0.13px;
  -moz-letter-spacing: -0.13px;
  -ms-letter-spacing: -0.13px;
  letter-spacing: -0.13px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 4px;
  width: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c7.c7.c7.c7.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 1003px;
}

.c17.c17.c17.c17.c17 {
  display: inline-block;
}

.c16.c16.c16.c16.c16 {
  display: inline-grid;
}

.c16.c16.c16.c16.c16 > * {
  grid-area: 1 / 1;
}

.c14.c14.c14.c14.c14 {
  position: absolute;
  bottom: 22px;
  pointer-events: none;
  white-space: nowrap;
  border-radius: 4px;
  padding: 2px 4px;
  background-color: hsla(0,0%,0%,0.72);
  opacity: 0;
  -webkit-transition: opacity 160ms cubic-bezier(0.17,0,1,1),-webkit-transform 160ms cubic-bezier(0.17,0,1,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition: opacity 160ms cubic-bezier(0.17,0,1,1),transform 160ms cubic-bezier(0.17,0,1,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1);
  transition: opacity 160ms cubic-bezier(0.17,0,1,1),transform 160ms cubic-bezier(0.17,0,1,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1);
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8.c8.c8.c8.c8 {
  position: relative;
  width: 100%;
  height: 32px;
  margin-bottom: 0px;
}

.c9.c9.c9.c9.c9 {
  position: absolute;
  inset-inline: 0;
  top: 4px;
  height: 24px;
  cursor: pointer;
  touch-action: none;
}

.c9.c9.c9.c9.c9::before {
  content: '';
  position: absolute;
  inset-inline: 0;
  top: -10px;
  bottom: -10px;
}

.c10.c10.c10.c10.c10 {
  position: absolute;
  inset-inline: 0;
  top: 11px;
}

.c13.c13.c13.c13.c13 {
  position: absolute;
  top: 6px;
  width: 12px;
  height: 12px;
  border-radius: 9999px;
  background-color: hsla(0,0%,0%,1);
  outline: none;
  -webkit-transition: inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
  transition: inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
}

.c13.c13.c13.c13.c13:focus-visible {
  outline: 4px solid hsla(206,10%,29%,0.12);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
  -webkit-transition: outline-width 80ms cubic-bezier(0.3,0,0.2,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
  transition: outline-width 80ms cubic-bezier(0.3,0,0.2,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
}

<div>
  <div
    class=""
    data-blade-component="slider-input"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <span
        data-blade-component="form-label"
        id="slider-input-1-label-6"
        style="width: 100%; flex-shrink: 0; margin-right: 0px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <div
                class="c3"
                data-blade-component="base-box"
              >
                <p
                  class="c4"
                  data-blade-component="text"
                  letter-spacing="50"
                >
                  Volume
                </p>
                <div
                  class="c5"
                  data-blade-component="visually-hidden"
                >
                  <p
                    class="c6"
                    data-blade-component="text"
                    letter-spacing="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
      <div
        class="c7"
        data-blade-component="base-box"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <div
                class="c11"
              >
                <div
                  class="c12"
                  style="background-color: rgba(67, 67, 67, 0.12);"
                />
                <div
                  class="c12"
                  style="background-color: rgb(0, 0, 0); clip-path: inset(0 calc(100% - (calc(3px + 0 * (100% - 3px)))) 0 0);"
                />
              </div>
            </div>
            <div
              aria-disabled="false"
              aria-labelledby="slider-input-1-label-6"
              aria-orientation="horizontal"
              aria-valuemax="100"
              aria-valuemin="0"
              aria-valuenow="0"
              aria-valuetext="0"
              class="c13"
              id="slider-input-1-input-2"
              role="slider"
              style="inset-inline-start: calc(1.5px + 0 * (100% - 3px)); transform: translateX(-50%);"
              tabindex="0"
            />
            <div
              aria-hidden="true"
              class="c14"
              style="inset-inline-start: calc(1.5px + 0 * (100% - 3px)); transform: translateX(-50%) translateY(2px);"
            >
              <p
                class="c15"
                data-blade-component="text"
                letter-spacing="50"
              >
                <span
                  class="c16"
                  data-blade-component="animated-value"
                >
                  <span
                    class="c17"
                    display="inline-block"
                    style="opacity: 1; transform: none;"
                  >
                    0
                  </span>
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SliderInput /> should render with markers, a scale and a left positioned label 1`] = `
.c11.c11.c11.c11.c11 {
  position: relative;
  width: 100%;
  height: 3px;
}

.c12.c12.c12.c12.c12 {
  position: absolute;
  inset: 0;
  border-radius: 9999px;
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;
  -webkit-mask-repeat: no-repeat;
  -webkit-mask-composite: source-in;
  -webkit-mask-composite: intersect;
  mask-composite: intersect;
  -webkit-transition: clip-path 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
  transition: clip-path 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
}

.c4.c4.c4.c4.c4 {
  color: hsla(200,10%,18%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
  overflow: hidden;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow-wrap: break-word;
  word-break: break-word;
}

.c6.c6.c6.c6.c6 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c15.c15.c15.c15.c15 {
  color: hsla(0,0%,100%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.8125rem;
  -webkit-letter-spacing: -0.13px;
  -moz-letter-spacing: -0.13px;
  -ms-letter-spacing: -0.13px;
  letter-spacing: -0.13px;
  margin: 0;
  padding: 0;
}

.c20.c20.c20.c20.c20 {
  color: hsla(204,9%,42%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.8125rem;
  -webkit-letter-spacing: -0.13px;
  -moz-letter-spacing: -0.13px;
  -ms-letter-spacing: -0.13px;
  letter-spacing: -0.13px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1.c1.c1.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  margin-bottom: 0px;
  width: 100%;
}

.c2.c2.c2.c2.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 4px;
}

.c3.c3.c3.c3.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  max-height: 36px;
  gap: 0px;
}

.c7.c7.c7.c7.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 79px;
}

.c17.c17.c17.c17.c17 {
  display: inline-block;
}

.c16.c16.c16.c16.c16 {
  display: inline-grid;
}

.c16.c16.c16.c16.c16 > * {
  grid-area: 1 / 1;
}

.c14.c14.c14.c14.c14 {
  position: absolute;
  bottom: 22px;
  pointer-events: none;
  white-space: nowrap;
  border-radius: 4px;
  padding: 2px 4px;
  background-color: hsla(0,0%,0%,0.72);
  opacity: 0;
  -webkit-transition: opacity 160ms cubic-bezier(0.17,0,1,1),-webkit-transform 160ms cubic-bezier(0.17,0,1,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1);
  -webkit-transition: opacity 160ms cubic-bezier(0.17,0,1,1),transform 160ms cubic-bezier(0.17,0,1,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1);
  transition: opacity 160ms cubic-bezier(0.17,0,1,1),transform 160ms cubic-bezier(0.17,0,1,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1);
}

.c5.c5.c5.c5.c5 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  left: -10000px;
  white-space: nowrap;
  word-wrap: normal;
}

.c8.c8.c8.c8.c8 {
  position: relative;
  width: 100%;
  height: 32px;
  margin-bottom: 4px;
}

.c9.c9.c9.c9.c9 {
  position: absolute;
  inset-inline: 0;
  top: 4px;
  height: 24px;
  cursor: pointer;
  touch-action: none;
}

.c9.c9.c9.c9.c9::before {
  content: '';
  position: absolute;
  inset-inline: 0;
  top: -10px;
  bottom: -10px;
}

.c10.c10.c10.c10.c10 {
  position: absolute;
  inset-inline: 0;
  top: 11px;
}

.c13.c13.c13.c13.c13 {
  position: absolute;
  top: 6px;
  width: 12px;
  height: 12px;
  border-radius: 9999px;
  background-color: hsla(0,0%,0%,1);
  outline: none;
  -webkit-transition: inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
  transition: inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
}

.c13.c13.c13.c13.c13:focus-visible {
  outline: 4px solid hsla(206,10%,29%,0.12);
  outline-offset: 1px;
  -webkit-transition-property: outline-width;
  transition-property: outline-width;
  -webkit-transition-duration: 80ms;
  transition-duration: 80ms;
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  z-index: 2;
  -webkit-transition: outline-width 80ms cubic-bezier(0.3,0,0.2,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
  transition: outline-width 80ms cubic-bezier(0.3,0,0.2,1),inset-inline-start 80ms cubic-bezier(0.3,0,0.2,1),background-color 160ms cubic-bezier(0.3,0,0.2,1);
}

.c18.c18.c18.c18.c18 {
  position: absolute;
  inset-inline: 0;
  top: 24px;
  pointer-events: none;
}

.c19.c19.c19.c19.c19 {
  position: absolute;
  white-space: nowrap;
}

<div>
  <div
    class=""
    data-blade-component="slider-input"
  >
    <div
      class="c0"
      data-blade-component="base-box"
    >
      <span
        data-blade-component="form-label"
        id="slider-input-19-label-24"
        style="width: 120px; flex-shrink: 0; margin-right: 12px;"
      >
        <div
          class="c1"
          data-blade-component="base-box"
        >
          <div
            class="c2"
            data-blade-component="base-box"
          >
            <div
              class=""
              data-blade-component="base-box"
            >
              <div
                class="c3"
                data-blade-component="base-box"
              >
                <p
                  class="c4"
                  data-blade-component="text"
                  letter-spacing="50"
                >
                  Corner Radius
                </p>
                <div
                  class="c5"
                  data-blade-component="visually-hidden"
                >
                  <p
                    class="c6"
                    data-blade-component="text"
                    letter-spacing="50"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </span>
      <div
        class="c7"
        data-blade-component="base-box"
      >
        <div
          class="c8"
        >
          <div
            class="c9"
          >
            <div
              class="c10"
            >
              <div
                class="c11"
              >
                <div
                  class="c12"
                  style="mask-image: radial-gradient(circle 3px at calc(1.5px + 0 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 0.2 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 0.4 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 0.6 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 0.8 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 1 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px); background-color: rgba(67, 67, 67, 0.12);"
                />
                <div
                  class="c12"
                  style="mask-image: radial-gradient(circle 3px at calc(1.5px + 0 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 0.2 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 0.4 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 0.6 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 0.8 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px), radial-gradient(circle 3px at calc(1.5px + 1 * (100% - 3px)) 50%, #000 0 1.5px, transparent 1.5px 3px, #000 3px); background-color: rgb(0, 0, 0); clip-path: inset(0 calc(100% - (calc(3px + 0.4 * (100% - 3px)))) 0 0);"
                />
              </div>
            </div>
            <div
              aria-disabled="false"
              aria-labelledby="slider-input-19-label-24"
              aria-orientation="horizontal"
              aria-valuemax="40"
              aria-valuemin="0"
              aria-valuenow="16"
              aria-valuetext="16"
              class="c13"
              id="slider-input-19-input-20"
              role="slider"
              style="inset-inline-start: calc(1.5px + 0.4 * (100% - 3px)); transform: translateX(-50%);"
              tabindex="0"
            />
            <div
              aria-hidden="true"
              class="c14"
              style="inset-inline-start: calc(1.5px + 0.4 * (100% - 3px)); transform: translateX(-50%) translateY(2px);"
            >
              <p
                class="c15"
                data-blade-component="text"
                letter-spacing="50"
              >
                <span
                  class="c16"
                  data-blade-component="animated-value"
                >
                  <span
                    class="c17"
                    display="inline-block"
                    style="opacity: 1; transform: none;"
                  >
                    16
                  </span>
                </span>
              </p>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="c18"
          >
            <div
              class="c19"
              style="inset-inline-start: calc(1.5px + 0 * (100% - 3px)); transform: translateX(-50%);"
            >
              <p
                class="c20"
                data-blade-component="text"
                letter-spacing="50"
              >
                0
              </p>
            </div>
            <div
              class="c19"
              style="inset-inline-start: calc(1.5px + 0.2 * (100% - 3px)); transform: translateX(-50%);"
            >
              <p
                class="c20"
                data-blade-component="text"
                letter-spacing="50"
              >
                8
              </p>
            </div>
            <div
              class="c19"
              style="inset-inline-start: calc(1.5px + 0.4 * (100% - 3px)); transform: translateX(-50%);"
            >
              <p
                class="c20"
                data-blade-component="text"
                letter-spacing="50"
              >
                16
              </p>
            </div>
            <div
              class="c19"
              style="inset-inline-start: calc(1.5px + 0.6 * (100% - 3px)); transform: translateX(-50%);"
            >
              <p
                class="c20"
                data-blade-component="text"
                letter-spacing="50"
              >
                24
              </p>
            </div>
            <div
              class="c19"
              style="inset-inline-start: calc(1.5px + 0.8 * (100% - 3px)); transform: translateX(-50%);"
            >
              <p
                class="c20"
                data-blade-component="text"
                letter-spacing="50"
              >
                32
              </p>
            </div>
            <div
              class="c19"
              style="inset-inline-start: calc(1.5px + 1 * (100% - 3px)); transform: translateX(-50%);"
            >
              <p
                class="c20"
                data-blade-component="text"
                letter-spacing="50"
              >
                40
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
